--- a/css/bigdata.css
+++ b/css/bigdata.css
@@ -51,3 +51,8 @@ html, body, .wrapper {
   z-index: 10; 
 }
 
+.leftbarStyle{
+    background: url("user-img-background.jpg") no-repeat no-repeat;
+    height: 160px;
+}
+
