Well-commented the HTML structure

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 ﻿/* Navbar ====================================== */
 @import url(materialize.css);
+
+
 .navbar {
   font-family: "Roboto", sans-serif;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
-  border-radius: 0;
+  border-radius: 0
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   -ms-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
@@ -16,22 +18,32 @@
   left: 0;
   z-index: 12;
   width: 100%; }
-  .navbar .navbar-brand {
+
+
+
+.navbar .navbar-brand {
     white-space: nowrap;
     -ms-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     overflow: hidden; }
-  .navbar .navbar-custom-right-menu {
+
+.navbar .navbar-custom-right-menu {
     float: right; }
-  .navbar .navbar-toggle {
+
+
+
+
+.navbar .navbar-toggle {
     text-decoration: none;
     color: #fff;
     width: 20px;
     height: 20px;
     margin-top: -4px;
     margin-right: 17px; }
-    .navbar .navbar-toggle:before {
+
+
+.navbar .navbar-toggle:before {
       content: '\E8D5';
       font-family: 'Material Icons';
       font-size: 26px; }
